--- a/languages/uk.po
+++ b/languages/uk.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Maker 0.3.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/maker-mariupol\n"
 "POT-Creation-Date: 2016-10-26 22:53+0300\n"
-"PO-Revision-Date: 2016-10-26 22:53+0300\n"
+"PO-Revision-Date: 2016-10-28 21:34+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: uk_UA\n"
@@ -18,7 +18,7 @@ msgstr ""
 
 #: 404.php:16
 msgid "Oops! That page can&rsquo;t be found."
-msgstr ""
+msgstr "Ой! Сторінку не знайдено"
 
 #: 404.php:20
 msgid ""
@@ -26,6 +26,8 @@ msgid ""
 "But there are still couple of things you can do. Click on the site logo to "
 "go to the homepage or try searching."
 msgstr ""
+"Схоже, сторінка, яку ви шукаєте, переїхала або не існує. Утім ви можете "
+"клікнути на лого і повернутися на головну або скористатися пошуком."
 
 #: comments.php:29
 msgid "One Reply"
