--- a/languages/maker.pot
+++ b/languages/maker.pot
@@ -1,10 +1,10 @@
-# Copyright (C) 2016 ThemePatio
+# Copyright (C) 2016 ThemePatio (fork by Kolya Korobochkin)
 # This file is distributed under the GNU General Public License v2 or later.
 msgid ""
 msgstr ""
-"Project-Id-Version: Maker Mariupol 0.3.0\n"
+"Project-Id-Version: Maker Mariupol 0.1.10\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/maker-mariupol\n"
-"POT-Creation-Date: 2016-10-28 18:45:32+00:00\n"
+"POT-Creation-Date: 2016-11-07 17:49:27+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -253,6 +253,10 @@ msgstr ""
 msgid "Newer Comments"
 msgstr ""
 
+#: inc-mariupol/Admin/MetaBoxes/Intro/MetaBox.php:11
+msgid "Intro"
+msgstr ""
+
 #: inc-mariupol/template-tags.php:100
 msgid "&copy;&nbsp;%1$s «%2$s»"
 msgstr ""
@@ -332,7 +336,7 @@ msgstr ""
 #: template-parts/content-page.php:24
 #: template-parts/content-single-portfolio-jetpack.php:34
 #: template-parts/content-single-portfolio-toolkit.php:34
-#: template-parts/content-single.php:32 template-parts/content.php:26
+#: template-parts/content-single.php:34 template-parts/content.php:26
 #: template-parts-mariupol/content-single.php:17
 msgid "Pages:"
 msgstr ""
@@ -363,7 +367,7 @@ msgid ""
 msgstr ""
 
 #. Author of the plugin/theme
-msgid "ThemePatio"
+msgid "ThemePatio (fork by Kolya Korobochkin)"
 msgstr ""
 
 #. Author URI of the plugin/theme
